5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1592_1803.log
== TEST (2019-03-25 21:10:18) 
-- CODE:
x4 = int(input())
x3 = int(input())
x2 = int(input())
x1 = int(input())
a = x4*2
b = x3*3
c = x2*4
d = x1*5
y = (a + b + c + d)%11
print( y )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x3 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:10:40) 
-- CODE:
x4 = int(input())
x3 = int(input())
x2 = int(input())
x1 = int(input())
a = x4*2
b = x3*3
c = x2*4
d = x1*5
y = (a + b + c + d)%11
print( y )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x3 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:15:20) 
-- CODE:
x = int(input("quatro digitos:"))
a = (x%b)*2
n = (a%n)*3
o = (n%p)*4
k = (p%y)*5
r = (a + n + o + k)%11
print( r )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = (x%b)*2
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:16:16) 
-- CODE:
x = int(input("quatro digitos:"))
a = (x//4)*2
n = (a%n)*3
o = (n%p)*4
k = (p%y)*5
r = (a + n + o + k)%11
print( r )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n = (a%n)*3
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:30:40) 
-- CODE:
x = int(input("quatro digitos:"))
a = x // 1000#
b = x%1000
c = b//100#
d = b%100
e = d // 10#
f = d%10#
r = a * 2
s = c*3
t = e * 4
u = f*5
g = (r+s+t+u)%11
print( g )
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:31:10) 
-- CODE:
x = int(input("quatro digitos:"))
a = x // 1000#
b = x%1000
c = b//100#
d = b%100
e = d // 10#
f = d%10#
r = a * 2
s = c*3
t = e * 4
u = f*5
g = (r+s+t+u)%11
print( g )
-- EXECUTION TIME:
0.12412
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
4
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
8
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:06:06) 
-- CODE:
x = int(input("quatro digitos:"))
a = x // 1000#
b = x%1000
c = b//100#
d = b%100
e = d // 10#
f = d%10#
r = a * 2
s = c*3
t = e * 4
u = f*5
g = (r+s+t+u)%11
print( g )
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
